[package]
name = "prom_push"
version = "0.1.0"
edition = "2021"

[dependencies]
prometheus = "0.13.3"
prometheus_push = { version = "0.4.3", default-features = false, features = [ "with_reqwest", "prometheus_crate" ] }
reqwest = "0.11.22"
tokio = { version = "1.34.0", features = ["full"] }
url = "2.5.0"
